# eden-turboquant

./: .editorconfig  .gitignore  BENCHMARKS.md  BENCHMARKS_v07.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
benchmarks/: bench_fused_sdpa.py  micro_full_fused_attention.py  models.yaml  needle_results.md  report_builder.py  run_all.py  run_benchmark.py  run_full_suite.py  tool_call_accuracy.py  tool_call_tests.jsonl  verify_models.py  visualize.py
benchmarks/archive_v06/: README.md
configs/: m1_max_64gb.yaml  m4_16gb.yaml
docs/: COMPETITIVE_AUDIT.md  FULL_FUSED_ATTENTION_RESULTS.md  FUSED_SDPA_RESULTS.md  INTERNALS.md
mlx_turboquant/: __init__.py  cache.py  cli.py  codebook.py  fused_sdpa.py  kernels.py  patch.py  qjl.py
mlx_turboquant/codebooks/: codebook_d256_b1.npz  codebook_d64_b1.npz  codebook_d64_b3.npz  codebook_d96_b1.npz  codebook_d96_b3.npz
results/: verify_cached.json
results/post_patch/: all.json  mlx-community__DeepSeek-R1-0528-Qwen3-8B-4bit.json  mlx-community__Meta-Llama-3.1-8B-Instruct-4bit.json  mlx-community__Mistral-7B-Instruct-v0.3-4bit.json  mlx-community__Phi-3.5-mini-instruct-4bit.json  (+3 more)
scripts/: QUALITY_DIAGNOSIS.md  diagnose_quality.py
tests/: REAL_MODEL_RESULTS.md  test_edge_cases.py  test_full_fused_attention.py  test_fused_attention.py  test_fused_kernel_integration_tripwire.py  test_fused_sdpa_integration.py  test_integration.py  test_phase1.py  test_phase2.py  test_smoke.py
(+14 files in other folders)
